--- a/manager-gateway/src/main/resources/application.properties
+++ b/manager-gateway/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 ################################################# database ##################################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop_dt_manager_api
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_dt_manager_gateway
 spring.datasource.username=root
 spring.datasource.password=Aa123456@
 
 ################################################# jpa/hibernate ##################################################
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #formatting
 spring.jpa.hibernate.format_sql=true
 #to show sql
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 #printing parameter values in order
 logging.level.org.hibernate.type.descriptor.sql=trace
 
