--- a/manager-gateway/src/main/resources/application.properties
+++ b/manager-gateway/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=Aa123456@
 
 ################################################# jpa/hibernate ##################################################
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #formatting
