--- a/manager-gateway/src/main/resources/application.properties
+++ b/manager-gateway/src/main/resources/application.properties
@@ -26,3 +26,6 @@ management.endpoint.shutdown.enabled=true
 endpoints.shutdown.enabled=true
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=1m
+
+################################################# okta Properties ##################################################
+okta.oauth2.issuer = https://dev-77487342.okta.com/oauth2/default
