--- a/manager-gateway/src/main/resources/application.properties
+++ b/manager-gateway/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.lifecycle.timeout-per-shutdown-phase=1m
 
 ################################################# okta Properties ##################################################
 okta.oauth2.issuer = https://dev-77487342.okta.com/oauth2/default
+okta.client.orgUrl=https://dev-77487342.okta.com
+okta.client.token=00cor92qr_z3wxD7-BS5H9AznwJxZTdyYWvRBcMzeS
