--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "crypto-js": "^4.1.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
+    "sha.js": "^2.4.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
